# spyglass

./: .dockerignore  .env.example  .gitignore  .replit  CODEBASE_OVERVIEW.md  Dockerfile  Instructions.md  README.md  ai_batch_validation.py  ai_conductor.py  ai_continuation_system.py  ai_extraction.py  ai_extraction_backup.py  ai_extraction_broken.py  ai_extraction_consolidated.py  ai_extraction_consolidated_broken.py  ai_extraction_embedded.py  ai_extraction_fixed.py  ai_extraction_minimal.py  ai_extraction_new.py  ai_extraction_only.py  ai_extraction_optimized.py  ai_extraction_orchestrator.py  ai_extraction_simplified.py  ai_extraction_simplified_backup.py  ai_extraction_single_step.py  ai_extraction_streamlined.py  ai_extraction_wizard.py  ai_extraction_working.py  ai_schema_generator.py  ai_schema_generator_broken.py  ai_validation_only.py  all_prompts.py  check_data.js  check_identifier_mapping.py  check_logs.sh  check_standard_equivalent.py  chunked_extraction_test.json  chunked_pdf_extractor.py  clear_auth.html  (+142 more)
.github/: dependabot.yml
attached_assets/: Full anonymised_v3_Ersatz v2 subset_1759152806994.xlsx  Pasted--1-Issue-Analysis-The-current-function-is-failing-because-there-is-a-fundamental-mismatch-betwee-1755587238380_1755587238380.txt  Pasted--AI-EXTRACTION-PROMPT--1756581422835_1756581422835.txt  Pasted--AI-EXTRACTION-PROMPT--1756581692018_1756581692019.txt  Pasted--AI-EXTRACTION-PROMPT--1756582014137_1756582014137.txt  Pasted--AI-EXTRACTION-PROMPT--1756724405246_1756724405246.txt  Pasted--AI-EXTRACTION-PROMPT--1756739650285_1756739650286.txt  (+275 more)
(+231 files in other folders)
