[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.25.0",
    "google-generativeai>=0.8.5",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "sift-stack-py>=0.7.0",
]
